--- a/Develop/index.html
+++ b/Develop/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-    <div class="header">
+    <!-- Site Navigation Links -->
+    <div class="header"> 
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -26,7 +27,7 @@
     </div>
     <div class="hero"></div>
     <div class="content">
-        <div class="search-engine-optimization">
+        <div id ="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
