--- a/Develop/index.html
+++ b/Develop/index.html
@@ -73,9 +73,9 @@
         </div>
     </div>
     <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <h4>Made with ❤️️ by Horiseon</h4>
         <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
+             <h5> &copy; 2019 Horiseon Social Solution Services, Inc. </h5>
         </p>
     </div>
 </body>
