consolidated html and css code, updated code comments

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -7,11 +7,13 @@
     <title>Horiseon Services - SEO, Reputation Management, Social Media Marketing, Cost Management</title>
 </head>
 
+
 <body>
-    <!-- Site Navigation Links -->
-    <div class="header"> 
+    <!-- HEADER SECTION -->
+    <header> 
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <!-- SITE NAVIGATION -->
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -23,61 +25,72 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </div>
+        </nav>
+    </header>
+
+<!-- BACKGROUND IMAGE -->
+    
     <div class="background" alt="Image of four professionals in a meeting gathered around a table focusing on a solution"></div>
-    <div class="content">
-        <div id ="search-engine-optimization" class="search-engine-optimization">
+        
+    <!-- MAIN -->
+    <main>
+        <section id ="search-engine-optimization" class="offerings">
             <img src="./assets/images/search-engine-optimization.jpg" alt ="SEO image picturing laptop, binder, coffee and colored pencils" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
+        </section>
+        <section id="online-reputation-management" class="offerings">
             <img src="./assets/images/online-reputation-management.jpg" alt ="Image of laptop displaying charts and graphs with text reputation" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
+        </section>
+        <section id="social-media-marketing" class="offerings">
             <img src="./assets/images/social-media-marketing.jpg" alt= "Image of people gathered around a wooden table with cartoon like expressions including like, share, tweet, and media chat bubbles" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
-    </div>
-    <div class="benefits">
-        <div class="benefit-lead">
+        </section>
+    </main>
+
+<!-- SIDEBAR SECTION -->
+    <aside class="benefits">
+        <div class="benefit">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Symbol of lead generation, half gear merged with a money icon" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+
+        <div class="benefit">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="Symbol of a proffesional with a lightbulb head radiating energy" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+
+        <div class="benefit">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="Symbol of a gear wheel resting upon money coins" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </div>
-    <div class="footer">
+
+    </aside>
+    <!-- FOOTER -->
+    <footer>
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
              <h5> &copy; 2019 Horiseon Social Solution Services, Inc. </h5>
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
