updated readme, added more comments to both index and css file, added link to live project

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
+<!-- HEAD -->
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
+    <!-- TITLE -->
     <title>Horiseon Services - SEO, Reputation Management, Social Media Marketing, Cost Management</title>
 </head>
 
-
+<!-- BODY -->
 <body>
     <!-- HEADER SECTION -->
     <header> 
@@ -34,6 +36,7 @@
         
     <!-- MAIN -->
     <main>
+        <!-- SECTION 1 -->
         <section id ="search-engine-optimization" class="offerings">
             <img src="./assets/images/search-engine-optimization.jpg" alt ="SEO image picturing laptop, binder, coffee and colored pencils" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -41,6 +44,8 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
+
+        <!-- SECTION 2 -->
         <section id="online-reputation-management" class="offerings">
             <img src="./assets/images/online-reputation-management.jpg" alt ="Image of laptop displaying charts and graphs with text reputation" class="float-right" />
             <h2>Online Reputation Management</h2>
@@ -48,6 +53,8 @@
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
+
+        <!-- SECTION 3 -->
         <section id="social-media-marketing" class="offerings">
             <img src="./assets/images/social-media-marketing.jpg" alt= "Image of people gathered around a wooden table with cartoon like expressions including like, share, tweet, and media chat bubbles" class="float-left" />
             <h2>Social Media Marketing</h2>
@@ -84,7 +91,7 @@
         </div>
 
     </aside>
-    <!-- FOOTER -->
+    <!-- FOOTER WITH COPYRIGHT-->
     <footer>
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
